# valid.mrz-ocr

./: .envrc  .gitignore  flake.nix
crnn/: PLAN.md  TROUBLE.md  flake.nix
crnn/notebooks/: train_crnn.ipynb
crnn/scripts/: dataset.py  debug_backward.py  debug_layers.py  export_onnx.py  model.py  prepare_data.py  test_ctc.py  train.py  validate.py
crnn/wasm/: index.html  package.json  server.mjs
paddleocr-validation/: design.md  detection2recognition.md  flake.nix  pyproject.toml  quickstart.py
tesseract-ft/: .gitignore  PLAN.md  flake.nix
tesseract-ft/scripts/: generate_training.py  validate.py
wasm-poc/: .gitignore  README.md  flake.nix  package.json  pnpm-lock.yaml  server.mjs
wasm-poc/public/: index.html
wasm-poc/scripts/: export_yolo.py  validate_ocr.py
